# learn_cpp

./: .cproject  .gitignore  README.md
KeyboardFbdump/: CMakeLists.txt  KeyboardFbdump.cpp
UUID/: compare.c  gen_uuid.c
Utility/: AQueue.h  DebugCtrl.cpp  DebugCtrl.h  Misc.cpp  Misc.h
cpp_base/: multimap_test.cpp
device_test/Device/: CMakeLists.txt  SerialDev.cpp  SerialDev.h  SpiDevice.cpp  SpiDevice.h  UdpDevice.cpp  UdpDevice.h
device_test/testCase/: CMakeLists.txt  SerialDev_test.cpp  UdpDevice_test.cpp  check_data.cpp  spd_test.cpp  spi_stl_test.cpp  spi_test.cpp  zeromq_client.cpp  zeromq_server.cpp
iostream_test/: iostream_test.sln
iostream_test/Debug/: iostream_test.ilk
iostream_test/iostream_test/: iostream_test.cpp  iostream_test.vcxproj  iostream_test.vcxproj.filters  main.cpp  stdafx.cpp  test.txt
iostream_test/iostream_test/Debug/: vc141.idb
iostream_test/iostream_test/Debug/iostream_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  iostream_test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
protobuf_test/: CMakeLists_cross.txt  CMakeLists_pc.txt  LT.Interaction.pb.cc  LT.Interaction.pb.h  LT.Interaction.proto  Reader.cpp  Writer.cpp  auto_protoc.sh~
protobuf_test/LT/: Interaction_pb2.py
protocal_test/: generate_data.cpp
serial_test/: serial_test.c
spi_test/: make.sh  spidev_test  spidev_test.c
spi_test/spidev-lib/: CMakeLists.txt
spi_test/spidev-lib/sample/: spidev-testcpp.cc
spi_test/spidev-lib/src/: spidev_lib++.cc  spidev_lib++.h
std_thread_test/: std_thread_test.sln
std_thread_test/Debug/: std_thread_test.ilk
std_thread_test/std_thread_test/: std_thread_test.cpp  std_thread_test.vcxproj  std_thread_test.vcxproj.filters  stdafx.cpp
std_thread_test/std_thread_test/Debug/: vc141.idb
std_thread_test/std_thread_test/Debug/std_thread_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  std_thread_test.lastbuildstate
stl_test/stl_test/: stl_test.sln
stl_test/stl_test/Debug/: stl_test.ilk
stl_test/stl_test/stl_test/: stdafx.cpp  stl_test.cpp  stl_test.vcxproj  stl_test.vcxproj.filters  string_char_test.cpp
stl_test/stl_test/stl_test/Debug/: vc141.idb
stl_test/stl_test/stl_test/Debug/stl_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  stl_test.lastbuildstate
tcp_test/: CMakeLists.txt  tcp_client.cpp  tcp_server  tcp_server.cpp
udp_broadcast/: make.sh  udpClient  udpClient.c  udpServer  udpServer.c
zmq_test/: CMakeLists.txt  MyZmq.h  zermq_pub_test.cpp  zermq_rep_test  zermq_rep_test.cpp  zermq_req_test.cpp  zermq_sub_test.cpp
